add codeship build badge to citely homepage

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <span class="right-tail"></span>
         </span>
         <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+		<img src="https://codeship.com/projects/0643ca50-5e52-0132-bfe8-72d241f098bc/status?branch=master"></img>
         <span class="octocat"></span>
       </footer>
 
